# project_templates

./: CONTRIBUTING.md  README.md  setup.cfg
.github/workflows/: pylint.yml
src/: main.py
utils/: terminal.py
utils/os_interfaces/: linux_interface.py  windows_interface.py
