[metadata]
name = project_templates
version = 0.1.0
author = Christopher James
author_email = mindful.d3v@gmail.com
description = A CLI tool for creating new projects with best practices templates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mindful-Developer/project_templates
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
# List your project's dependencies here
# e.g., requests >= 2.19.1
# If there are no dependencies, you can remove the install_requires section or leave it empty.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scaffold = project_templates.main:main  # Assuming `projectstarter` is your package name and `main` is your module with the entry function.

